--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,15 @@
-[submodule "external/SCTL"]
-	path = external/SCTL
+[submodule "extern/SCTL"]
+	path = extern/SCTL
 	url = https://github.com/dmalhotra/SCTL.git
-[submodule "external/eigen"]
-	path = external/eigen
+[submodule "extern/eigen"]
+	path = extern/eigen
 	url = https://gitlab.com/libeigen/eigen.git
-[submodule "external/spdlog"]
-	path = external/spdlog
+[submodule "extern/spdlog"]
+	path = extern/spdlog
 	url = https://github.com/gabime/spdlog.git
-[submodule "external/nanobench"]
-	path = external/nanobench
+[submodule "extern/nanobench"]
+	path = extern/nanobench
 	url = https://github.com/martinus/nanobench.git
-[submodule "external/doctest"]
-	path = external/doctest
+[submodule "extern/doctest"]
+	path = extern/doctest
 	url = https://github.com/doctest/doctest.git
