--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,7 @@ set(INCLUDES
 set(SRC 
     ${PROJECT_SOURCE_DIR}/src/hpdmk.cpp
     ${PROJECT_SOURCE_DIR}/src/ewald.cpp
+    ${PROJECT_SOURCE_DIR}/src/tree.cpp
 )
 
 add_library(OBJS OBJECT ${SRC})
@@ -57,24 +58,41 @@ add_library(${PROJECT_NAME}_shared SHARED)
 set_target_properties(${PROJECT_NAME}_shared PROPERTIES OUTPUT_NAME ${PROJECT_NAME})
 target_link_libraries(${PROJECT_NAME}_shared OBJS OpenMP::OpenMP_CXX MPI::MPI_CXX BLAS::BLAS vesin)
 
-if(BUILD_TESTS)
-    enable_testing()
-    set(TEST_SRC 
-        ${PROJECT_SOURCE_DIR}/test/hpdmk_test.cpp
-        ${PROJECT_SOURCE_DIR}/test/ewald_test.cpp
-    )
+# if(BUILD_TESTS)
+#     enable_testing()
+#     set(TEST_SRC 
+#         ${PROJECT_SOURCE_DIR}/test/hpdmk_test.cpp
+#         ${PROJECT_SOURCE_DIR}/test/ewald_test.cpp
+#     )
 
-    add_executable(
-        ${PROJECT_NAME}_test
-        ${TEST_SRC}
-    )
-    target_link_libraries(
-        ${PROJECT_NAME}_test
-        GTest::gtest_main
-        ${PROJECT_NAME}_shared
-        vesin
-    )
+#     add_executable(
+#         ${PROJECT_NAME}_test
+#         ${TEST_SRC}
+#     )
+#     target_link_libraries(
+#         ${PROJECT_NAME}_test
+#         GTest::gtest_main
+#         ${PROJECT_NAME}_shared
+#         vesin
+#     )
 
-    include(GoogleTest)
-    gtest_discover_tests(${PROJECT_NAME}_test)
-endif()
+#     include(GoogleTest)
+#     gtest_discover_tests(${PROJECT_NAME}_test)
+# endif()
+
+enable_testing()
+set(TEST_SRC 
+    ${PROJECT_SOURCE_DIR}/test/hpdmk_test.cpp
+    ${PROJECT_SOURCE_DIR}/test/ewald_test.cpp
+)
+
+add_executable(
+    ${PROJECT_NAME}_test
+    ${TEST_SRC}
+)
+target_link_libraries(
+    ${PROJECT_NAME}_test
+    GTest::gtest_main
+    ${PROJECT_NAME}_shared
+    vesin
+)
