--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
         submodules: recursive
 
     - name: Install dependencies
-      run: sudo apt-get update && sudo apt-get install -y build-essential cmake libomp-dev libopenmpi-dev libblas-dev libgoogle-perftools-dev google-perftools
+      run: sudo apt-get update && sudo apt-get install -y build-essential cmake libomp-dev libopenmpi-dev libblas-dev liblapack-dev libgoogle-perftools-dev google-perftools
 
     - name: Configure CMake
       run: cmake -B ${{github.workspace}}/build -DBUILD_TESTS=ON
