--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,8 +53,8 @@ set(SRC
     ${PROJECT_SOURCE_DIR}/src/planewave.cpp
     ${PROJECT_SOURCE_DIR}/src/energy.cpp
     ${PROJECT_SOURCE_DIR}/src/energy_direct.cpp
+    ${PROJECT_SOURCE_DIR}/src/energy_shift.cpp
     ${PROJECT_SOURCE_DIR}/src/utils.cpp
-    # ${PROJECT_SOURCE_DIR}/src/kernels.cpp
     ${PROJECT_SOURCE_DIR}/src/pswf.cpp
 )
 
